--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </p>
         </section>
     </main>
-    <section class="benefits">
+    <aside class="benefits">
         <section class="right-side-settings">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -72,7 +72,7 @@
                 need to advertise your page.
             </p>
         </section>
-    </section>
+    </aside>
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
