--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </header>
     <section class="hero"></section>
     <main class="content">
+        <!-- changed div to section-->
         <section class="section-settings">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -29,6 +30,7 @@
             </p>
         </section>
         <section class="section-settings">
+            <!-- consolidated classes to single class and removed ID-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -47,6 +49,8 @@
             </p>
         </section>
     </main>
+        <!--consolidated benifits class into one class-->
+        <!--consolidated right-side-settings class into one class-->
     <aside class="benefits">
         <section class="right-side-settings">
             <h3>Lead Generation</h3>
