--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="hero"></section>
     <main class="content">
         <!-- changed div to section-->
-        <section class="section-settings">
+        <section id="search-engine-optimization" class="section-settings">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -29,7 +29,7 @@
                 your visibility and find the right customers for your business.
             </p>
         </section>
-        <section class="section-settings">
+        <section id="online-reputation-management" class="section-settings">
             <!-- consolidated classes to single class and removed ID-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -39,7 +39,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section class="section-settings">
+        <section id="social-media-marketing" class="section-settings">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
