changed page title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon | Search Engine Optimization</title>
+    <title>Horiseon | Search Engine Optimization and Smarter Marketing</title>
 </head>
 
 <body>
@@ -21,6 +21,7 @@
     <main class="content">
         <!-- changed div to section-->
         <section id="search-engine-optimization" class="section-settings">
+            <!--added ID to fix broken link-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
